# gwyddion

./: .cvsignore  AUTHORS  CODING-STANDARDS  COPYING  ChangeLog  INSTALL.gwyddion  Makefile.am  NEWS  README  THANKS  TODO  TODO.dn2010  TODO.klapetek  TODO.yeti  WIN32-HOWTO  autogen.sh  check-coding-style.py  configure.ac  gen.def.sh  gendoc.pl  gwyddion-devel.iss.in  gwyddion.desktop  gwyddion.iss.in  gwyddion.pc.in  gwyddion.spec.in  make.msc  makefile.msc  rules.msc  update-msvc.py  version.h.in  vim-syn-gen.py  x-gwyddion.desktop
app/: .cvsignore  Makefile.am  README.objdata  about.c  about.h  app.c  app.h  arith.c  arith.h  croscor.c  data-browser-aux.c  data-browser.c  data-browser.h  datachooser.c  datachooser.h  file.c  file.h  filelist.c  filelist.h  funcuse.c  funcuse.h  glmaterial-editor.c  glmaterial-editor.h  gradient-editor.c  gradient-editor.h  graphlist.c  graphlist.h  gwyapp.h  gwyappfilechooser.c  gwyappfilechooser.h  gwyappinternal.h  gwyapptypes.c.template  gwyapptypes.h.template  gwyddion  gwyddion.c  gwyddion.h  gwymoduleutils-file.c  gwymoduleutils-file.h  gwymoduleutils.c  gwymoduleutils.h  (+51 more)
data/: .cvsignore  Makefile.am  config.h.win32.in  gwyconfig.h.win32  gwyddion-cfg.py  gwyddion-devel.iss.in  gwyddion.1  gwyddion.desktop  gwyddion.desktop.in  gwyddion.iss.in  gwyddion.nsit.in  gwyddion.pc.in  gwyddion.spec.in  gwyddion.thumbnailer.in  gwyddion.xml  makefile.msc  mingw-gwyddion-libs.spec.in  mingw32-gwyddion-libs.spec.in  thumbnailer-schemas.xsl  version.h.in
devel-docs/: 32bit-packages  CODING-STANDARDS  Makefile.am  README  README.QA  add-objects.py  extract-types.py  gtk-doc.mk  makefile.msc  ncrosslinks.py  style.css
libdraw/: .cvsignore  Makefile  Makefile.am  gwydraw.c  gwydraw.h  gwydrawenums.h  gwydrawinternal.h  gwyglmaterial.c  gwyglmaterial.h  gwygradient.c  gwygradient.h  gwypalette.c  gwypalette.h  gwypalettedef.c  gwypalettedef.h  gwypixfield.c  gwypixfield.h  gwyresource.c  gwyresource.h  gwyrgba.c  gwyrgba.h  gwyselection.c  gwyselection.h  libgwydraw.def  makefile.msc  makefile.msc.gwt  palconv.py  test.c
libgwyddion/: .cvsignore  Makefile.am  gwycontainer.c  gwycontainer.h  gwyddion.c  gwyddion.h  gwyddionenums.h  gwyddioninternal.h  gwyddiontypes.c.template  gwyddiontypes.h.template  gwydebugobjects.c  gwydebugobjects.h  gwyentities.c  gwyentities.h  gwyenum.c  gwyenum.h  gwyexpr.c  gwyexpr.h  gwyfdcurvepreset.c  gwyfdcurvepreset.h  gwyinventory.c  gwyinventory.h  gwymacros.h  gwymath.c  gwymath.h  gwymathfallback.h  gwymd5.c  gwymd5.h  gwynlfit.c  gwynlfit.h  gwynlfitpreset.c  gwynlfitpreset.h  gwypathconf.h.in  gwyrandgenset.c  gwyrandgenset.h  gwyresource.c  gwyresource.h  gwyserializable.c  gwyserializable.h  gwyshapefitpreset.c  (+19 more)
libgwydgets/: .cvsignore  Makefile.am  create-data.c  gwy3dlabel.c  gwy3dlabel.h  gwy3dlabels.c  gwy3dlabels.h  gwy3dsetup.c  gwy3dsetup.h  gwy3dview.c  gwy3dview.h  gwy3dwindow.c  gwy3dwindow.h  gwyaxis.c  gwyaxis.h  gwyaxisdialog.c  gwyaxisdialog.h  gwyaxiser.c  gwyaxiser.h  gwycoloraxis.c  gwycoloraxis.h  gwycolorbutton.c  gwycolorbutton.h  gwycombobox.c  gwycombobox.h  gwycurve.c  gwycurve.h  gwydataview.c  gwydataview.h  gwydataviewlayer.c  gwydataviewlayer.h  gwydatawindow.c  gwydatawindow.h  gwydgetenums.c  gwydgetenums.h  gwydgetmarshals.list  gwydgets.c  gwydgets.h  gwydgettypes.c.template  gwydgettypes.h.template  (+136 more)
libgwymodule/: .cvsignore  Makefile.am  gwymodule-file.c  gwymodule-file.h  gwymodule-graph.c  gwymodule-graph.h  gwymodule-layer.c  gwymodule-layer.h  gwymodule-process.c  gwymodule-process.h  gwymodule-tool.c  gwymodule-tool.h  gwymodule-volume.c  gwymodule-volume.h  gwymodule-xyz.c  gwymodule-xyz.h  gwymodule.c  gwymodule.h  gwymodulebrowser.c  gwymodulebrowser.h  gwymoduleenums.h  gwymoduleinternal.h  gwymoduleloader.c  gwymoduleloader.h  gwymoduletypes.c.template  gwymoduletypes.h.template  libgwymodule.def  makefile.msc  makefile.msc.gwt
libprocess/: .cvsignore  Makefile  Makefile.am  arithmetic.c  arithmetic.h  brick.c  brick.h  cdline.c  cdline.h  correct.c  correct.h  correlation.c  correlation.h  cwt.c  cwt.h  datafield.c  datafield.h  dataline.c  dataline.h  delaunay.c  delaunay.h  dwt.c  dwt.h  elliptic.c  elliptic.h  filters.c  filters.h  fractals.c  fractals.h  grains.c  grains.h  gwycaldata.c  gwycaldata.h  gwycalibration.c  gwycalibration.h  gwygrainvalue.c  gwygrainvalue.h  gwyprocess.c  gwyprocess.h  gwyprocessenums.c  (+52 more)
m4/: Makefile.am  cc-options.m4  enable.m4  gtk-doc.m4  gwy-c99math.m4  gwy-cc-options.m4  gwy-enable.m4  gwy-math.m4  gwy-preproc-symbol.m4  gwy-python.m4  pkg.m4  python-include.m4  tools.m4
modules/: .cvsignore  Makefile.am  README.pygwy  makefile.msc  makefile.msc.gwt  plugin-proxy-common.c  plugin-proxy.c  pygwy.c  pygwy.override
perl/: .cvsignore  Makefile.am
pixmaps/: .cvsignore  Makefile.am  cd_line.xcf  cd_rline.xcf  cd_rstep.xcf  cd_step.xcf  gwy_3d_base-24.xcf  gwy_arithmetic-24.xcf  gwy_cantilever-24.xcf  gwy_color_range-24.xcf  gwy_crop-24.xcf  gwy_data_arithmetic-24.xcf  gwy_direction-24.xcf  gwy_edge-24.xcf  gwy_extract_path-24.xcf  gwy_favourite-24.xcf  gwy_fft-24.xcf  gwy_filter-24.xcf  gwy_fit_triangle-24.xcf  gwy_flip_horizontally-24.xcf  gwy_flip_vertically-24.xcf  gwy_gl_material-16.xcf  gwy_gradient-24.xcf  gwy_grains-24.xcf  gwy_graph-24.xcf  gwy_graph_zoom-24.xcf  gwy_graph_zoom_out-24.xcf  gwy_iso_roughness-24.xcf  gwy_less-24.xcf  gwy_level-24.xcf  gwy_light_rotate-24.xcf  gwy_line_correction-24.xcf  gwy_load_message-20.xcf  gwy_load_message-24.xcf  gwy_markup-20.xcf  gwy_mask-16.xcf  gwy_mask-24.xcf  gwy_mask_grow-24.xcf  gwy_mask_invert-24.xcf  gwy_mask_remove-24.xcf  (+37 more)
ruby/: Makefile.am
thumbnailer/: Makefile.am  OSX-links  Win32-links  gwyddion-thumbnailer.1  gwyddion-thumbnailer.c  gwythumbcreator.cc
utils/: .cvsignore  Makefile.am  README  align-declarations.py  bundler  bundler.in  check-coding-style.py  check-dep-versions.py  documentation-stats.py  dump-modules.c  extract-file-magic.py  flatten.py  gen-authors.py  gen-gwyddion-msvc-sln.py  gen-gwyddion-vs-sln.py  gen-news.py  gendoc.pl  gendoc2.pl  (+29 more)
(+724 files in other folders)
